# sensor

./: .gitignore  CMakeLists.txt  Makefile  README.md  run_static_check.py  run_tests.py
core/memory/: safe_memory.c  safe_memory.h
core/sensor/: sensor.c  sensor.h
core/trigger/: trigger.c  trigger.h
deploy/mock/: main.c
headers/: sensor.h
infra/mock/: mock_sensor.c
src/core/sensor/: sensor.c
src/core/trigger/: trigger.c
tests/: CMakeLists.txt  Makefile
tests/core/: safe_memory_test.cpp  sensor_test.cpp  sensor_trigger_test.cpp  trigger_test.cpp
tests/mock/: main.c  mock_sensor.c
